src/test/resources/testcases/valid/control/if_else.tc
// EXPECT_RETURN: 2
// Test if-else
int main() {
    int a = 10;
    if (a > 5) {
        a = 2;
    } else {
        a = 1;
    }
    return a;
}
