src/test/resources/testcases/invalid/syntax_error.tc
// Test syntax error
int main() {
    int a = ; // Missing expression
    return 0;
}
